--- a/index.html
+++ b/index.html
@@ -30,6 +30,39 @@
             <label><input type="checkbox" class="check-input" value="option4"> Option 4</label>
         </div>
     </div>
+
+    <div class="dropdown-container">
+        <div>
+            <p>Test Dropdowns</p>
+            <label for="dropdown1">Choose an option:</label>
+            <select id="dropdown1">
+                <option value="" disabled selected>Select</option>
+                <option value="option1">Option 1</option>
+                <option value="option2">Option 2</option>
+                <option value="option3">Option 3</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="alert-container">
+        <p>Test Alerts</p>
+        <ul style="list-style-type: none;">
+            <li><button onclick="jsAlert()">Click for JS Alert</button></li>
+            <li><button onclick="jsConfirm()">Click for JS Confirm</button></li>
+            <li><button onclick="jsPrompt()">Click for JS Prompt</button></li>
+        </ul>
+    </div>
+
+    <div class="tab-container">
+        <p>Test Child Tabs</p>
+        <a href="https://www.youtube.com/" target="_blank" class="tab-link">Click Here</a>
+    </div>
+
+    <div class="iframe-container">
+        <p>Test iFrames</p>
+        <iframe id="testIframe" src="http://127.0.0.1:5500/" width="600px" height="600px"></iframe>
+    </div>
+
     <script src="script.js"></script>
     </div>
 </body>
