testing basic table

--- a/index.html
+++ b/index.html
@@ -63,6 +63,31 @@
         <iframe id="testIframe" src="http://127.0.0.1:5500/" width="600px" height="600px"></iframe>
     </div>
 
+    <div class="table-container">
+        <p>Test Tables</p>
+        <table id="users-table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Alice</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Bob</td>
+                    <td>30</td>
+                    <td>Canada</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <script src="script.js"></script>
     </div>
 </body>
