Mouse operations testing

--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
         </table>
     </div>
 
+    <div class="mouseOperations-container">
+        <p>Test Mouse Operations</p>
+        <button type="button" id="click-btn">Click Me</button>
+        <button type="button" id="double-click-btn">Double Click Me</button>
+
+        <div class="hover-area" id="hover-area">
+            Hover Over Me
+        </div>
+
+        <div class="right-click-area" id="right-click-area">
+            Right Click Here
+        </div>
+    </div>
+
+    <div class="scrollview-container">
+        <p>Test Scroll View</p>
+        <div class="scrollview-area">I am in the view</div>
+    </div>
+
     <script src="script.js"></script>
     </div>
 </body>
